--- a/dev/StyleGuild.html
+++ b/dev/StyleGuild.html
@@ -6,13 +6,20 @@
     <title>Style Guild Line</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel=“stylesheet” href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel=“stylesheet” href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/v4-shims.min.css">
     <link rel="stylesheet" href="./css/StyleGuild.css">
     <script src="./js/jquery.min.js"></script>
+    <script src="./js/vue.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg==" crossorigin="anonymous"></script>
+    <script src="./js/jquery.fullpage.js"></script>
 </head>
 <body>
     <header>
         <div class="logobox">
-            <img id="logo" src="./images/logo/LOGO_white.png" alt="">
+            <img id="logo" src="./images/logo/LOGO_white.png" alt=""> 
         </div>
     </header>
     <main>
