--- a/dev/StyleGuild.html
+++ b/dev/StyleGuild.html
@@ -44,19 +44,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>button class="btnA_XLwRA"</p>
+                    <p>btnA_XLwRA</p>
                     <button class="btnA_XLwRA"><p>按鈕範例</p><div class="btnArrowXL"></div></button>
                     <br><br>
-                    <p>button class="btnA_LwRA"</p>
+                    <p>btnA_LwRA</p>
                     <button class="btnA_LwRA"><p>範例鈕</p><div class="btnArrowL"></div></button>
                     <br><br>
-                    <p>button class="btnA_L"</p>
+                    <p>btnA_L</p>
                     <button class="btnA_L"><p>按鈕範例</p></button>
                     <br><br>
-                    <p>button class="btnA_MwRA"</p>
+                    <p>btnA_MwRA</p>
                     <button class="btnA_MwRA"><div class="btnArrowM"></button>
                     <br><br>
-                    <p>button class="btnA_S"</p>
+                    <p>btnA_S</p>
                     <button class="btnA_S pgprev"><p style="transform: translate(-5px , 0px); transition: 0s;">&#10229</p></button>
                     <button class="btnA_S pg -active"><p>01</p></button>
                     <button class="btnA_S pg"><p>02</p></button>
@@ -65,33 +65,33 @@
                     <button class="btnA_S pg"><p>05</p></button>
                     <button class="btnA_S pgnext"><p style="transform: translate(-5px , 0px); transition: 0s;">&#10230</p></button>
                     <br><br><br><br>
-                    <p>class="btnB_XL_blue"</p>
+                    <p>btnB_XL_blue</p>
                     <button class="btnB_XL_blue"><p>按鈕</p><div class="bg"></div></button>
                     <br><br>
-                    <p>class="btnB_L_blue"</p>
+                    <p>btnB_L_blue</p>
                     <button class="btnB_L_blue"><p>按鈕</p><div class="bg"></div></button>
                 </div>
 
                 <div class="col-md-6">
-                    <p>button class="btnA_XLwLA"</p>
+                    <p>btnA_XLwLA</p>
                     <button class="btnA_XLwLA"><p>按鈕範例</p><div class="btnArrowXL"></div></button>
                     <br><br>
-                    <p>button class="btnA_LwLA"</p>
+                    <p>btnA_LwLA</p>
                     <button class="btnA_LwLA"><p>範例鈕</p><div class="btnArrowL"></div></button>
                     <br><br>
                     <p style="visibility: hidden;">button class="btnA_L"</p>
                     <button style="visibility: hidden;" class="btnA_L"><p>按鈕範例</p></button>
                     <br><br>
-                    <p>button class="btnA_MwLA"</p>
+                    <p>btnA_MwLA</p>
                     <button class="btnA_MwLA"><div class="btnArrowM"></button>
                     <br><br>
                     <p style="visibility: hidden;">button class="btnA_S"</p>
                     <button style="visibility: hidden;" class="btnA_S"><p>01</p></button>
                     <br><br><br><br>
-                    <p>class="btnB_XL_yellow"</p>
+                    <p>btnB_XL_yellow</p>
                     <button class="btnB_XL_yellow"><p>範例</p><div class="bg"></div></button>
                     <br><br>
-                    <p>class="btnB_L_yellow"></p>
+                    <p>btnB_L_yellow</p>
                     <button class="btnB_L_yellow"><p>範例</p><div class="bg"></div></button>
                 </div>
             </div>
