--- a/dev/product_info.html
+++ b/dev/product_info.html
@@ -34,7 +34,7 @@
                         <div class="pre_text">PREV</div>
                     </div>
                     <div class="next" @click="nextIndex">
-                        <div class="next_text">NEXT</div>
+                        <button class="btnA_LwRA"><p>NEXT</p><div class="btnArrowL"></div></button>
                         <div class="next_pic"><img src="../img/鞋子.png" alt=""></div>
                     </div>
                 </div>
