--- a/dev/product_info.html
+++ b/dev/product_info.html
@@ -15,9 +15,9 @@
     <title>商品詳細頁</title>
 </head>
 <body>
-    <header style="height: 100px; border: 1px solid; background-color: #153A64"></header>
+    @@include('header.html')
     <div class="wrap" id="app">
-        <button class="back"><a href="./product.html">返回總覽</a></button>
+        <button class="btnA_LwLA"><p><a href="./product.html">回總覽</a></p><div class="btnArrowL"></div></button>
         <div class="product_block">
             <div class="left">
                 <div class="main_pic">
@@ -31,7 +31,7 @@
                 <div class="move">
                     <div class="pre" @click="preIndex">
                         <div class="pre_pic"><img src="../img/登山杖.png" alt=""></div>
-                        <div class="pre_text">PREV</div>
+                        <button class="btnA_LwLA"><p>PREV</p><div class="btnArrowL"></div></button>
                     </div>
                     <div class="next" @click="nextIndex">
                         <button class="btnA_LwRA"><p>NEXT</p><div class="btnArrowL"></div></button>
@@ -65,56 +65,8 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <div class="footer_logo_block">
-            <img src="images/logo/LOGO_white.png" alt="">
-            <div class="copyright">Copyright © 2020 Mountain Community.</div>
-        </div>
-        <div class="footer_info">
-            <div class="sevrves_place-serves_tel">
-                <div class="place">
-                    <div class="f_color1">服務地點</div>
-                    <div class="f_color1">桃園市中壢區中大路300號</div>
-                    <div class="f_color1">工程二館 資策會大樓</div>
-                </div>
-                <div class="tel">
-                    <div class="f_color1">連絡電話</div>
-                    <div class="f_color1">(03)425-7387</div>
-                </div>
-            </div>
-            <div class="serves_time-serves_email">
-                <div class="time">
-                    <div class="f_color1">服務時間</div>
-                    <div class="f_color1">週一至週五10:00~17:00</div>
-                </div>
-                <div class="email">
-                    <div class="f_color1">服務信箱</div>
-                    <div class="f_color1">tibame@gmail.com</div>
-                </div>
-            </div>
-            <div class="epaper-footer_link">
-                <div class="epaper">
-                    <div class="etitle f_color1">輸入信箱訂閱電子報</div>
-                    <div class="einput">
-                        <input type="text" placeholder="Email address">
-                        <div class="e_bt f_color1">SUBSCRIBE</e_bt>
-                    </div>
-                </div>
-                <div class="link">
-                    <div class="linkup">
-                        <div><a href="https://www.cwb.gov.tw/V8/C/" target="_blank">中央氣象局</a></div>
-                        <div><a href="https://npm.cpami.gov.tw/" target="_blank">登山證申請</a></div>
-                        <div><a href="" target="_blank">網站快速導覽</a></div>
-                    </div>
-                    <div class="linkdown">
-                        <div><a href="" target="_blank">服務條款及隱私權政策</a></div>
-                        <div><a href="" target="_blank">會員使用條款</a></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <script>
+    @@include('footer.html')
+    <script> 
 
 
         new Vue({
