--- a/dev/INDIVIDUAL/Ling/login_v2.html
+++ b/dev/INDIVIDUAL/Ling/login_v2.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel=“stylesheet” href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel=“stylesheet” href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/v4-shims.min.css">
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="../../sass/common.scss">
 	<link rel="stylesheet" href="../../../css/login_v2.css">
 </head>
 <body>
