--- a/dev/product_info.html
+++ b/dev/product_info.html
@@ -54,9 +54,9 @@
                 <div class="artical">
                     <h4 class="related_artical">相關討論文章</h4>
                     <div class="at_dots">
-                        <div class="at_dot"></div>
-                        <div class="at_dot"></div>
-                        <div class="at_dot"></div>
+                        <div class="at_dot"><a href="./comment.html">{{文章的名字}}</a></div>
+                        <div class="at_dot"><a href="./comment.html">{{文章的名字}}</a></div>
+                        <div class="at_dot"><a href="./comment.html">{{文章的名字}}</a></div>
                     </div>
                     <!-- <div class="at_title">{{forum_post_title}}</div>
                     <div class="at_title">{{forum_post_title}}</div>
