--- a/dev/product_info.html
+++ b/dev/product_info.html
@@ -57,6 +57,7 @@
                         <div class="at_dot"><a href="./comment.html">{{文章的名字}}</a></div>
                         <div class="at_dot"><a href="./comment.html">{{文章的名字}}</a></div>
                         <div class="at_dot"><a href="./comment.html">{{文章的名字}}</a></div>
+                        <div class="at_dot"><a href="./comment.html">{{文章的名字}}</a></div>
                     </div>
                     <!-- <div class="at_title">{{forum_post_title}}</div>
                     <div class="at_title">{{forum_post_title}}</div>
