--- a/dev/footer.html
+++ b/dev/footer.html
@@ -1,11 +1,12 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/footer.css">
     <title>footer</title>
 </head>
-<body> -->
+<body>    
     <footer class="footer">
         <div class="footer_logo_block">
             <img src="./images/logo/LOGO_white.png" alt="">
@@ -54,5 +55,5 @@
             </div>
         </div>
     </footer>
-<!-- </body>
-</html> -->
+</body>
+</html>
